Fixed pan bug, hide overflow in items by default

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,4 +13,5 @@
   justify-content: center;
   align-items: center;
   font-size: 12px;
+  overflow: hidden;
 }
